# pysomtum-generic-demo

./: Pipfile  pyproject.toml
pysomtum/: manage.py
pysomtum/leads/: admin.py  models.py  serializers.py
pysomtum/leads/migrations/: 0001_initial.py
pysomtum/leads/views/: create_api_views.py  create_views.py  list_api_views.py  list_views.py
pysomtum/pysomtum/: settings.py  urls.py  wsgi.py
pysomtum/templates/: create_lead.html  home.html
pysomtum/templates/leads/: lead_form.html  lead_list.html
