[tool.poetry]
name = "pysomtum-generic-demo"
version = "0.1.0"
description = ""
authors = ["Yothin Muangsommuk <m@yothinix.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.6"
djangorestframework = "^3.14.0"
django-filter = "^22.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
